some util commands and elastic single node configuration in dev mode

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -112,9 +112,10 @@ services:
     environment:
       - node.name=es01
       - cluster.name=es-docker-cluster
-      - cluster.initial_master_nodes=es01
+      #- cluster.initial_master_nodes=es01
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms2048m -Xmx2048m"
+      - discovery.type=single-node
     ulimits:
       memlock:
         soft: -1
