add autostart to containers

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+    restart: always
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -38,6 +39,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+    restart: always
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:6.0.1
@@ -53,7 +55,8 @@ services:
       PORT: 9021
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
-
+    restart: always
+  
   kafka-connect:
     image: confluentinc/cp-kafka-connect-base:6.0.0
     container_name: kafka-connect
@@ -105,6 +108,7 @@ services:
         sleep infinity
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+    restart: always
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.11.2
@@ -126,6 +130,7 @@ services:
       - 9200:9200
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+    restart: always
 
   kib01:
     image: docker.elastic.co/kibana/kibana:7.11.2
@@ -137,3 +142,4 @@ services:
       ELASTICSEARCH_HOSTS: '["http://es01:9200"]'
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
+    restart: always
