--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -143,3 +143,30 @@ services:
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
     restart: always
+    
+  mongodb:
+    image: mongo
+    restart: always
+    volumes:
+      - ./.docker/dbdata:/data/db
+      - ./.docker/mongo:/docker-entrypoint-initdb.d
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+      - MONGO_INITDB_DATABASE=fullcycle
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8085:8081
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_AUTH_USERNAME=root
+      - ME_CONFIG_MONGODB_AUTH_PASSWORD=root
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+    depends_on:
+      - mongodb
