--- a/mongodb.properties
+++ b/mongodb.properties
@@ -3,6 +3,7 @@ connector.class=com.mongodb.kafka.connect.MongoSinkConnector
 task.max=1
 topics=mysql-server.fullcycle.categories
 connection.uri=mongodb://root:root@mongodb/
+mongodb://root:root@75.119.154.67:27017
 database=fullcycle
 transforms=extractValue
 transforms.extractValue.type=org.apache.kafka.connect.transforms.ExtractField$Value
