--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,6 +101,7 @@ services:
         echo "Installing Connector"
         confluent-hub install --no-prompt debezium/debezium-connector-mysql:1.2.2
         confluent-hub install --no-prompt confluentinc/kafka-connect-elasticsearch:10.0.1
+        confluent-hub install --no-prompt mongodb/kafka-connect-mongodb:1.5.0
         #
         echo "Launching Kafka Connect worker"
         /etc/confluent/docker/run &
