--- a/mongodb.properties
+++ b/mongodb.properties
@@ -1,9 +1,9 @@
 name=mongo-sink-from-mysql
 connector.class=com.mongodb.kafka.connect.MongoSinkConnector
 task.max=1
-topics=mysql-server.fullcycle.categories
+topics=mysql-server.products.products
 connection.uri=mongodb://root:root@mongodb/
-database=fullcycle
+database=products
 transforms=extractValue
 transforms.extractValue.type=org.apache.kafka.connect.transforms.ExtractField$Value
 transforms.extractValue.field=after
