--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -102,6 +102,7 @@ services:
         confluent-hub install --no-prompt debezium/debezium-connector-mysql:1.2.2
         confluent-hub install --no-prompt confluentinc/kafka-connect-elasticsearch:10.0.1
         confluent-hub install --no-prompt mongodb/kafka-connect-mongodb:1.5.0
+        confluent-hub install confluentinc/kafka-connect-http:latest
         #
         echo "Launching Kafka Connect worker"
         /etc/confluent/docker/run &
