--- a/http-sink.properties
+++ b/http-sink.properties
@@ -10,7 +10,7 @@ value.converter=org.apache.kafka.connect.storage.StringConverter
 confluent.topic.bootstrap.servers=localhost:9092
 confluent.topic.replication.factor=1
 # http sink connector configs
-http.api.url=http://localhost:8080/api/messages
+http.api.url=http://localhost:3000/api/product
 #auth.type=BASIC
 #connection.user=admin
 #connection.password=password
