--- a/http-sink.properties
+++ b/http-sink.properties
@@ -7,10 +7,10 @@ connector.class=io.confluent.connect.http.HttpSinkConnector
 key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.storage.StringConverter
 # licensing for local single-node Kafka cluster
-confluent.topic.bootstrap.servers=localhost:9092
+confluent.topic.bootstrap.servers=kafka:9092
 confluent.topic.replication.factor=1
 # http sink connector configs
-http.api.url=http://localhost:3000/api/product
+http.api.url=http-server:3000/api/product
 #auth.type=BASIC
 #connection.user=admin
 #connection.password=password
