--- a/http-sink.properties
+++ b/http-sink.properties
@@ -1,4 +1,4 @@
-# https://docs.confluent.io/5.1.0/connect/kafka-connect-http/index.html
+# https://docs.confluent.io/kafka-connect-http/current/index.html#http-connector-authentication
 name=HttpSink
 topics=mysql-server.products.products
 tasks.max=1
@@ -9,8 +9,11 @@ value.converter=org.apache.kafka.connect.storage.StringConverter
 # licensing for local single-node Kafka cluster
 confluent.topic.bootstrap.servers=kafka:9092
 confluent.topic.replication.factor=1
+# connect reporter required bootstrap server
+reporter.bootstrap.servers=kafka:9092
+reporter.result.topic.name=success-responses
+reporter.result.topic.replication.factor=1
+reporter.error.topic.name=error-responses
+reporter.error.topic.replication.factor=1
 # http sink connector configs
-http.api.url=http-server:3000/api/product
-#auth.type=BASIC
-#connection.user=admin
-#connection.password=password
+http.api.url=http://http-server:3000/api/product
