--- a/http-sink.properties
+++ b/http-sink.properties
@@ -5,7 +5,8 @@ tasks.max=1
 connector.class=io.confluent.connect.http.HttpSinkConnector
 # key/val converters
 key.converter=org.apache.kafka.connect.storage.StringConverter
-value.converter=org.apache.kafka.connect.storage.StringConverter
+value.converter=org.apache.kafka.connect.json.JsonConverter
+value.converter.schemas.enable=true
 # licensing for local single-node Kafka cluster
 confluent.topic.bootstrap.servers=kafka:9092
 confluent.topic.replication.factor=1
