--- a/http-sink.properties
+++ b/http-sink.properties
@@ -18,3 +18,7 @@ reporter.error.topic.name=error-responses
 reporter.error.topic.replication.factor=1
 # http sink connector configs
 http.api.url=http://http-server:3000/api/product
+transforms=InsertField
+transforms.InsertField.type=org.apache.kafka.connect.transforms.InsertField$Value
+transforms.InsertField.static.field=MessageSource
+transforms.InsertField.static.value=Kafka Connect framework
