--- a/http-sink.properties
+++ b/http-sink.properties
@@ -4,9 +4,11 @@ topics=mysql-server.products.products
 tasks.max=1
 connector.class=io.confluent.connect.http.HttpSinkConnector
 # key/val converters
-key.converter=org.apache.kafka.connect.storage.StringConverter
+key.converter=org.apache.kafka.connect.json.JsonConverter
+key.converter.schemas.enable=true
 value.converter=org.apache.kafka.connect.json.JsonConverter
 value.converter.schemas.enable=true
+value.converter.schemas.enable=false
 # licensing for local single-node Kafka cluster
 confluent.topic.bootstrap.servers=kafka:9092
 confluent.topic.replication.factor=1
@@ -18,7 +20,3 @@ reporter.error.topic.name=error-responses
 reporter.error.topic.replication.factor=1
 # http sink connector configs
 http.api.url=http://http-server:3000/api/product
-transforms=InsertField
-transforms.InsertField.type=org.apache.kafka.connect.transforms.InsertField$Value
-transforms.InsertField.static.field=MessageSource
-transforms.InsertField.static.value=Kafka Connect framework
