--- a/http-sink.properties
+++ b/http-sink.properties
@@ -18,5 +18,6 @@ reporter.result.topic.name=success-responses
 reporter.result.topic.replication.factor=1
 reporter.error.topic.name=error-responses
 reporter.error.topic.replication.factor=1
+headers=Content-Type:application/vnd.kafka.json.v2+json|Accept:application/vnd.kafka.v2+json
 # http sink connector configs
 http.api.url=http://http-server:3000/api/product
