--- a/http-sink.properties
+++ b/http-sink.properties
@@ -4,10 +4,10 @@ topics=mysql-server.products.products
 tasks.max=1
 connector.class=io.confluent.connect.http.HttpSinkConnector
 # key/val converters
-key.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter.schemas.enable=true
-value.converter=org.apache.kafka.connect.json.JsonConverter
-value.converter.schemas.enable=true
+key.converter=org.apache.kafka.connect.storage.StringConverter
+key.converter.schemas.enable=false
+value.converter=org.apache.kafka.connect.storage.StringConverter
+value.converter.schemas.enable=false
 # licensing for local single-node Kafka cluster
 confluent.topic.bootstrap.servers=kafka:9092
 confluent.topic.replication.factor=1
