--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -178,7 +178,7 @@ services:
     build: http-server/
     restart: always
     ports:
-      - 3000:3000
+      - 80:3000
     environment:
       - MONGO_URI=mongodb://mongodb:27017/products
       - MONGO_USER=root
@@ -187,3 +187,10 @@ services:
       - 'host.docker.internal:172.17.0.1'
     depends_on:
       - mongodb
+
+  nginx:
+    restart: always
+    ports:
+      - 8080:80
+    extra_hosts:
+      - 'host.docker.internal:172.17.0.1'
