--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,8 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
+    networks: 
+      - kong-net
 
   kafka-connect:
     image: confluentinc/cp-kafka-connect-base:6.0.0
@@ -150,6 +152,8 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
+    networks: 
+      - kong-net
 
   mongodb:
     image: mongo
