--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,12 +20,16 @@ services:
       - MYSQL_USER=root
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
+    networks: 
+      - kong-net
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     restart: always
+    networks: 
+      - kong-net
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -45,6 +49,8 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
+    networks: 
+      - kong-net
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:6.0.1
@@ -118,6 +124,8 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
+    networks: 
+      - kong-net
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.11.2
@@ -140,6 +148,8 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
+    networks: 
+      - kong-net
 
   kib01:
     image: docker.elastic.co/kibana/kibana:7.11.2
@@ -185,6 +195,8 @@ services:
       - ME_CONFIG_MONGODB_ADMINPASSWORD=root
     depends_on:
       - mongodb
+    networks: 
+      - kong-net
 
   products:
     build: products/
@@ -210,6 +222,8 @@ services:
       - 8080:80
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
+    networks: 
+      - kong-net
 
   #######################################
   # Postgres: The database used by Kong
