--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -137,6 +137,9 @@ services:
       - bootstrap.memory_lock=true
       - 'ES_JAVA_OPTS=-Xms2048m -Xmx2048m'
       - discovery.type=single-node
+      # Security
+      xpack.security.enabled: "true"
+      ELASTIC_PASSWORD: "elastic"
     ulimits:
       memlock:
         soft: -1
@@ -151,6 +154,7 @@ services:
     networks: 
       - kong-net
 
+  #https://discuss.elastic.co/t/how-to-set-passwords-for-built-in-users-with-docker-compose-setup/198096/3
   kib01:
     image: docker.elastic.co/kibana/kibana:7.11.2
     container_name: kib01
@@ -159,6 +163,10 @@ services:
     environment:
       ELASTICSEARCH_URL: http://es01:9200
       ELASTICSEARCH_HOSTS: '["http://es01:9200"]'
+      # Security
+      XPACK_SECURITY_ENABLED: "true"
+      ELASTICSEARCH_USERNAME: "kibana"
+      ELASTICSEARCH_PASSWORD: "kibanachangeme"
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
