--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -165,8 +165,8 @@ services:
       ELASTICSEARCH_HOSTS: '["http://es01:9200"]'
       # Security
       XPACK_SECURITY_ENABLED: "true"
-      ELASTICSEARCH_USERNAME: "kibana"
-      ELASTICSEARCH_PASSWORD: "kibanachangeme"
+      ELASTICSEARCH_USERNAME: "elastic"
+      ELASTICSEARCH_PASSWORD: "elastic"
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
     restart: always
