--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -338,6 +338,7 @@ services:
   # Portainer
   agent:
     image: portainer/agent
+    name: agent
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
@@ -347,15 +348,17 @@ services:
       mode: global
       placement:
         constraints: [node.platform.os == linux]
+    restart: always
 
   portainer:
     image: portainer/portainer-ce
-    command: -H tcp://tasks.agent:9001 --tlsskipverify
+    name: portainer
     ports:
       - '9000:9000'
       - '8000:8000'
     volumes:
       - portainer_data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - agent_network
     deploy:
@@ -363,3 +366,6 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
+    restart: always
+    depends_on:
+      - agent
