--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -338,7 +338,7 @@ services:
   # Portainer
   agent:
     image: portainer/agent
-    name: agent
+    container_name: agent
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
@@ -352,7 +352,7 @@ services:
 
   portainer:
     image: portainer/portainer-ce
-    name: portainer
+    container_name: portainer
     ports:
       - '9000:9000'
       - '8000:8000'
