--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -339,6 +339,8 @@ services:
   agent:
     image: portainer/agent
     container_name: agent
+    ports: 
+      - '9001:9001'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
