--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ networks:
 
 services:
   zookeeper:
+    container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -18,6 +19,7 @@ services:
       - kong-net
 
   kafka:
+    container_name: kafka
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
@@ -39,6 +41,7 @@ services:
       - kong-net
 
   control-center:
+    container_name: control-center
     image: confluentinc/cp-enterprise-control-center:6.0.1
     hostname: control-center
     depends_on:
@@ -161,6 +164,7 @@ services:
 
   mysql:
     image: wesleywillians/mysql-kafka-connect:latest
+    container_name: mysql
     command: --innodb-use-native-aio=0
     tty: true
     restart: always
@@ -177,6 +181,7 @@ services:
 
   mongodb:
     image: mongo
+    container_name: mongodb
     restart: always
     ports:
       - 27017:27017
@@ -194,6 +199,7 @@ services:
 
   mongo-express:
     image: mongo-express
+    container_name: mongo-express
     restart: always
     ports:
       - 8085:8081
@@ -210,6 +216,7 @@ services:
 
   products:
     build: products/
+    container_name: products
     restart: always
     hostname: products
     ports:
@@ -227,6 +234,7 @@ services:
 
   nginx:
     image: nginx
+    container_name: nginx
     restart: always
     ports:
       - 8080:80
@@ -263,6 +271,7 @@ services:
   #######################################
   kong-migration:
     image: ${KONG_DOCKER_TAG:-kong:latest}
+    container_name: kong-migration
     command: kong migrations bootstrap
     networks:
       - kong-net
@@ -281,7 +290,8 @@ services:
   #######################################
   kong:
     image: ${KONG_DOCKER_TAG:-kong:latest}
-    restart: on-failure
+    container_name: kong
+    restart: always
     networks:
       - kong-net
     environment:
@@ -311,6 +321,7 @@ services:
   #######################################
   konga-prepare:
     image: pantsel/konga:latest
+    container_name: konga-prepare
     command: '-c prepare -a postgres -u postgresql://kong:${KONG_PG_PASSWORD:-kong}@kong-database:5432/konga'
     networks:
       - kong-net
@@ -323,6 +334,7 @@ services:
   #######################################
   konga:
     image: pantsel/konga:latest
+    container_name: konga
     restart: always
     networks:
       - kong-net
@@ -339,7 +351,7 @@ services:
   agent:
     image: portainer/agent
     container_name: agent
-    ports: 
+    ports:
       - '9001:9001'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -373,5 +385,4 @@ services:
     depends_on:
       - agent
     extra_hosts:
-    - 'host.docker.internal:172.17.0.1'
-  
+      - 'host.docker.internal:172.17.0.1'
