--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -243,12 +243,9 @@ services:
     networks:
       - kong-net
 
-  #######################################
-  # Postgres: The database used by Kong
-  #######################################
-  kong-database:
+  postgres:
     image: postgres:9.6
-    container_name: kong-postgres
+    container_name: postgres
     restart: on-failure
     networks:
       - kong-net
@@ -256,7 +253,7 @@ services:
       - kong_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: kong
-      POSTGRES_PASSWORD: ${KONG_PG_PASSWORD:-kong}
+      POSTGRES_PASSWORD: ${PG_PASSWORD:-kong}
       POSTGRES_DB: kong
     ports:
       - '5432:5432'
@@ -278,12 +275,12 @@ services:
     restart: on-failure
     environment:
       KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
+      KONG_PG_HOST: postgres
       KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
-      KONG_PG_PASSWORD: ${KONG_PG_PASSWORD:-kong}
+      PG_PASSWORD: ${PG_PASSWORD:-kong}
     depends_on:
-      - kong-database
+      - postgres
 
   #######################################
   # Kong: The API Gateway
@@ -296,15 +293,15 @@ services:
       - kong-net
     environment:
       KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
+      KONG_PG_HOST: postgres
       KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
-      KONG_PG_PASSWORD: ${KONG_PG_PASSWORD:-kong}
+      PG_PASSWORD: ${PG_PASSWORD:-kong}
       KONG_PROXY_LISTEN: 0.0.0.0:8000
       KONG_PROXY_LISTEN_SSL: 0.0.0.0:8443
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
     depends_on:
-      - kong-database
+      - postgres
     healthcheck:
       test: ['CMD', 'kong', 'health']
       interval: 10s
@@ -322,12 +319,12 @@ services:
   konga-prepare:
     image: pantsel/konga:latest
     container_name: konga-prepare
-    command: '-c prepare -a postgres -u postgresql://kong:${KONG_PG_PASSWORD:-kong}@kong-database:5432/konga'
+    command: '-c prepare -a postgres -u postgresql://kong:${PG_PASSWORD:-kong}@postgres:5432/konga'
     networks:
       - kong-net
     restart: on-failure
     depends_on:
-      - kong-database
+      - postgres
 
   #######################################
   # Konga: Kong GUI
@@ -340,10 +337,10 @@ services:
       - kong-net
     environment:
       DB_ADAPTER: postgres
-      DB_URI: postgresql://kong:${KONG_PG_PASSWORD:-kong}@kong-database:5432/konga
+      DB_URI: postgresql://kong:${PG_PASSWORD:-kong}@postgres:5432/konga
       NODE_ENV: production
     depends_on:
-      - kong-database
+      - postgres
     ports:
       - '1337:1337'
 
