--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -253,7 +253,7 @@ services:
       - kong_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: kong
-      POSTGRES_PASSWORD: ${PG_PASSWORD:-kong}
+      POSTGRES_PASSWORD: ${KONG_PG_PASSWORD:-kong}
       POSTGRES_DB: kong
     ports:
       - '5432:5432'
@@ -278,7 +278,7 @@ services:
       KONG_PG_HOST: postgres
       KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
-      PG_PASSWORD: ${PG_PASSWORD:-kong}
+      KONG_PG_PASSWORD: ${KONG_PG_PASSWORD:-kong}
     depends_on:
       - postgres
 
@@ -296,7 +296,7 @@ services:
       KONG_PG_HOST: postgres
       KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
-      PG_PASSWORD: ${PG_PASSWORD:-kong}
+      KONG_PG_PASSWORD: ${KONG_PG_PASSWORD:-kong}
       KONG_PROXY_LISTEN: 0.0.0.0:8000
       KONG_PROXY_LISTEN_SSL: 0.0.0.0:8443
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
@@ -319,7 +319,7 @@ services:
   konga-prepare:
     image: pantsel/konga:latest
     container_name: konga-prepare
-    command: '-c prepare -a postgres -u postgresql://kong:${PG_PASSWORD:-kong}@postgres:5432/konga'
+    command: '-c prepare -a postgres -u postgresql://kong:${KONG_PG_PASSWORD:-kong}@postgres:5432/konga'
     networks:
       - kong-net
     restart: on-failure
@@ -337,7 +337,7 @@ services:
       - kong-net
     environment:
       DB_ADAPTER: postgres
-      DB_URI: postgresql://kong:${PG_PASSWORD:-kong}@postgres:5432/konga
+      DB_URI: postgresql://kong:${KONG_PG_PASSWORD:-kong}@postgres:5432/konga
       NODE_ENV: production
     depends_on:
       - postgres
